--- a/seahub/help/templates/help/file_locking.html
+++ b/seahub/help/templates/help/file_locking.html
@@ -3,20 +3,20 @@
 
 {% block help_con %}
 <h3 class="hd">{% trans "File locking" %}</h3>
-<p>{% trans "When more than one person collaborate on a file, it's likely that more than one person modify the file at about the same time. Seafile handles this situation nicely with conflict files. But it's often more convenient to lock the file when one person wants to exclusively modify the file. Seafile Professional Edition supports file locking." %}</p>
+<p>{% blocktrans %}When more than one person collaborate on a file, it's likely that more than one person modify the file at about the same time. Seafile handles this situation nicely with conflict files. But it's often more convenient to lock the file when one person wants to exclusively modify the file. Seafile Professional Edition supports file locking.{% endblocktrans %}</p>
 <p>{% trans "File locking works on both the web app and the desktop syncing client. We'll introduce them one by one." %}</p>
 <h4>{% trans "File locking on the Web App" %}</h4>
-<p>{% trans "To lock a file, you can navigate into the file's folder on the web app, and click on the \"operations\" drop-down menu." %}</p>
+<p>{% blocktrans %}To lock a file, you can navigate into the file's folder on the web app, and click on the "operations" drop-down menu.{% endblocktrans %}</p>
 <img src="{{ MEDIA_URL }}img/help/web_lock_file.png" alt="" />
-<p>{% trans "After the file is locked, you can see a red \"stop sign\" at the corner of the file icon. Moving the mouse on the stop sign, you can see who locks the file. And you can also unlock a file that's locked by you. But you cannot unlock files locked by others." %}</p>
+<p>{% blocktrans %}After the file is locked, you can see a red "stop sign" at the corner of the file icon. Moving the mouse on the stop sign, you can see who locks the file. And you can also unlock a file that's locked by you. But you cannot unlock files locked by others.{% endblocktrans %}</p>
 <img src="{{ MEDIA_URL }}img/help/web_file_locked.png" alt="" />
 <h4>{% trans "File locking on the desktop client" %}</h4>
 <p>{% trans "After a library is synced to the desktop, you can lock/unlock files in that library inside File Explorer on Windows or Finder on Mac OS." %}</p>
-<p>{% trans "To lock a file, just right click on a synced file and choose \"lock this file\" in the \"Seafile\" menu." %}</p>
+<p>{% blocktrans %}To lock a file, just right click on a synced file and choose "lock this file" in the "Seafile" menu.{% endblocktrans %}</p>
 <img src="{{ MEDIA_URL }}img/help/desktop_lock_file.png" alt="" />
-<p>{% trans "If a file is locked by you, you can see an orange \"stop sign\" on the file icon. You can choose to unlock it." %}</p>
+<p>{% blocktrans %}If a file is locked by you, you can see an orange "stop sign" on the file icon. You can choose to unlock it.{% endblocktrans %}</p>
 <img src="{{ MEDIA_URL }}img/help/desktop_my_locked_file.png" alt="" />
-<p>{% trans "If a file is locked by other user, you can see a red \"stop sign\" on the file icon. The file is automatically set to read-only. You cannot modify it until it's unlocked." %}</p>
+<p>{% blocktrans %}If a file is locked by other user, you can see a red "stop sign" on the file icon. The file is automatically set to read-only. You cannot modify it until it's unlocked.{% endblocktrans %}</p>
 <img src="{{ MEDIA_URL }}img/help/desktop_other_locked_file.png" alt="" />
 <p>{% trans "If a library is not synced, you can still use cloud file browser to lock and unlock files in it." %}</p>
 <h4>{% trans "Auto locking office files" %}</h4>
