--- a/seahub/help/templates/help/install_linux_client.html
+++ b/seahub/help/templates/help/install_linux_client.html
@@ -12,7 +12,7 @@
   <li><a href="#wiki-cli">Linux CLI</a></li>
 </ul>
 <h4 id="wiki-ubuntu">Ubuntu</h4>
-<p>{% trans "Ubuntu users can install Seafile client from the <a href=\"https://code.launchpad.net/~seafile/+archive/ubuntu/seafile-client\" target=\"_blank\">Official PPA</a>:" %}</p>
+<p>{% blocktrans %}Ubuntu users can install Seafile client from the <a href="https://code.launchpad.net/~seafile/+archive/ubuntu/seafile-client" target="_blank">Official PPA</a>:{% endblocktrans %}</p>
 <pre><code class="lang-sh">sudo add-apt-repository ppa:seafile/seafile-client
 sudo apt-get update
 sudo apt-get install seafile-gui
@@ -56,10 +56,10 @@ sudo yum install -y seafile --enablerepo=cr
 </code></pre>
 
 <h4 id="wiki-fedora">{% trans "Fedora (community maintained)" %}</h4>
-<p>{% trans "There is a <em>community maintained</em> Seafile Client RPM package in Fedora's <a href=\"https://src.fedoraproject.org/rpms/seafile\" target=\"_blank\">official repository</a>." %}</p>
+<p>{% blocktrans %}There is a <em>community maintained</em> Seafile Client RPM package in Fedora's <a href="https://src.fedoraproject.org/rpms/seafile" target="_blank">official repository</a>.{% endblocktrans %}</p>
 
 <h4 id="wiki-archlinux">{% trans "Arch Linux (community maintained)" %}</h4>
-<p>{% trans "There is a <em>community maintained</em> Seafile Client package for Arch Linux: <a href=\"https://aur.archlinux.org/packages/seafile-client/\" target=\"_blank\">https://aur.archlinux.org/packages/seafile-client/</a>." %}</p>
+<p>{% blocktrans %}There is a <em>community maintained</em> Seafile Client package for Arch Linux: <a href="https://aur.archlinux.org/packages/seafile-client/" target="_blank">https://aur.archlinux.org/packages/seafile-client/</a>.{% endblocktrans %}</p>
 
 <h4 id="wiki-cli">{% trans "Linux CLI usage" %}</h4>
 <p>{% blocktrans %}Please refer to <a href="{{ SITE_ROOT }}help/linux_cli">this documentation</a> for how to use Linux client on a command line server.{% endblocktrans %}</p>
