--- a/seahub/help/templates/help/install_sync.html
+++ b/seahub/help/templates/help/install_sync.html
@@ -17,7 +17,7 @@
 
 <h4>{% trans "3. Sync a library" %}</h4>
 <ul>
-    <li>{% trans "Click the \"Sync this library\" button to sync it with a local folder." %}</li>
+  <li>{% blocktrans %}Click the "Sync this library" button to sync it with a local folder.{% endblocktrans %}</li>
     <li>{% trans "Then you add some files into the library. They will be automatically synced with cloud platform." %}</li>
 </ul>
 
@@ -32,7 +32,7 @@
 <img src="{{ MEDIA_URL }}img/help/seafile-create-library-02.png" alt="" />
 
 <h4>{% trans "5. Browse files on the cloud" %}</h4>
-<p>{% trans "In some occasions, you want to modify files on the cloud directly without syncing them. Seafile client comes with a \"cloud file browser\" to meet this need. Click an unsynced library will open the cloud file browser." %}</p>
+<p>{% blocktrans %}In some occasions, you want to modify files on the cloud directly without syncing them. Seafile client comes with a "cloud file browser" to meet this need. Click an unsynced library will open the cloud file browser.{% endblocktrans %}</p>
 
 <img src="{{ MEDIA_URL }}img/help/seafile-cloud-file-browser.png" alt="" />
 
