--- a/seahub/help/templates/help/introduction.html
+++ b/seahub/help/templates/help/introduction.html
@@ -7,6 +7,6 @@
 
 <p>{% trans "Seafile is an enterprise file hosting platform with high reliability and performance." %}</p>
 <p>{% blocktrans %}Seafile contains a web interface for you to manage and share files. It has two kinds of desktop clients, <a href="{{ SITE_ROOT }}help/install_sync/">the file syncing client</a> and <a href="{{ SITE_ROOT }}help/using_drive_client">the drive client</a>. It also has mobile clients for Android and iOS.{% endblocktrans %}</p>
-<p>{% trans "You can download the clients in <a href=\"https://www.seafile.com/en/download/\" target=\"_blank\">Seafile web site</a>." %}</p>
-<p>{% trans "If this manual does not contain the information you needed, you can seek help in our forum: <a href=\"https://forum.seafile.com\" target=\"_blank\">https://forum.seafile.com</a>." %}</p>
+<p>{% blocktrans %}You can download the clients in <a href="https://www.seafile.com/en/download/" target="_blank">Seafile web site</a>.{% endblocktrans %}</p>
+<p>{% blocktrans %}If this manual does not contain the information you needed, you can seek help in our forum: <a href="https://forum.seafile.com" target="_blank">https://forum.seafile.com</a>.{% endblocktrans %}</p>
 {% endblock %}
