--- a/seahub/help/templates/help/restoring_deleted_files.html
+++ b/seahub/help/templates/help/restoring_deleted_files.html
@@ -8,7 +8,7 @@
 <p>{% trans "Here is how to use the trash bin feature:" %}</p>
 <ul>
   <li>{% trans "In Seafile Web App, navigate into the parent folder containing the deleted file or folder." %}</li>
-  <li>{% trans "Click the \"trash\" icon in the library operation bar. The deleted files and folders will be listed in deletion time order. In the bottom of the list, you can click the \"more\" button to load more deleted files." %}</li>
+  <li>{% blocktrans %}Click the "trash" icon in the library operation bar. The deleted files and folders will be listed in deletion time order. In the bottom of the list, you can click the "more" button to load more deleted files.{% endblocktrans %}</li>
   <li>{% trans "In the deleted files list, you can restore file and folders. If a file or folder's parent folder has been deleted, it will be restored to the library's root folder." %}</li>
   <li>{% trans "Note that the trash bin only contains files and sub-folders deleted under the current folder. Files deleted in the sub-folders of the current folder are also included in the list." %}</li>
 </ul>
