--- a/seahub/help/templates/help/selective_sync.html
+++ b/seahub/help/templates/help/selective_sync.html
@@ -7,10 +7,10 @@
 
 <p>{% trans "You may have some very large libraries on the Seafile server. And you're currently only interested in a sub-folder inside one library. Then you can selectively sync a sub-folder in a library, instead of syncing the entire library." %}</p>
 
-<p>{% trans "To sync a sub-folder, open cloud file browser by double clicking a library which hasn't been synced. Navigate into the parent folder of that sub-folder. Right click on the sub-folder. Choose \"Sync this folder\" in the pop-up menu." %}</p>
+<p>{% blocktrans %}To sync a sub-folder, open cloud file browser by double clicking a library which hasn't been synced. Navigate into the parent folder of that sub-folder. Right click on the sub-folder. Choose "Sync this folder" in the pop-up menu.{% endblocktrans %}</p>
 
 <img src="{{MEDIA_URL}}img/help/sync-a-sub-folder.png" alt="" />
 
-<p>{% trans "After syncing the sub-folder, you can see its syncing status in the \"Synced Libraries\" group in the client's main window." %}</p>
+<p>{% blocktrans %}After syncing the sub-folder, you can see its syncing status in the "Synced Libraries" group in the client's main window.{% endblocktrans %}</p>
 
 {% endblock %}
