--- a/seahub/help/templates/help/setting_library_history.html
+++ b/seahub/help/templates/help/setting_library_history.html
@@ -12,8 +12,8 @@
 </ul>
 <p>{% trans "The retention period of old files versions can be configured for each library, separately. You must be the library's owner to set the retention period. To set retention period length:" %}</p>
 <ul>
-<li>{% trans "In Seafile Web App, click the \"Mine\" tab in the navigation panel (as in the below screen shot). All libraries owned by you will be listed." %}</li>
-<li>{% trans "Move the cursor onto the row of the library. An operation menu will appear. Click \"History Setting\" in the drop-down menu." %}</li>
+  <li>{% blocktrans %}In Seafile Web App, click the "Mine" tab in the navigation panel (as in the below screen shot). All libraries owned by you will be listed.{% endblocktrans %}</li>
+  <li>{% blocktrans %}Move the cursor onto the row of the library. An operation menu will appear. Click "History Setting" in the drop-down menu.{% endblocktrans %}</li>
 <li>{% trans "In the pop-up dialog, you can set the length of file retention period." %}</li>
 </ul>
 <p><img src="{{ MEDIA_URL }}img/help/history_setting.png" alt=""></p>
