--- a/seahub/help/templates/help/desktop_proxy.html
+++ b/seahub/help/templates/help/desktop_proxy.html
@@ -9,6 +9,6 @@
 
 <p>{% trans "HTTP proxy and SOCKS5 proxy requires you to enter the proxy server's address and port. If you use system proxy settings, Seafile client reads proxy settings from the operating system. The operating system has some mechanisms to auto-detect proxy server information. So you don't have to manually enter proxy server address." %}</p>
 
-<p>{% trans "To change proxy settings, click the Seafile icon in the system notification area. Choose \"Settings\" in the menu. In the pop-up settings dialog, you can change proxy settings in the \"Network\" tab." %}</p>
+<p>{% blocktrans %}To change proxy settings, click the Seafile icon in the system notification area. Choose "Settings" in the menu. In the pop-up settings dialog, you can change proxy settings in the "Network" tab.{% endblocktrans %}</p>
 
 {% endblock %}
