--- a/seahub/help/templates/help/drive_client_for_linux.html
+++ b/seahub/help/templates/help/drive_client_for_linux.html
@@ -8,7 +8,7 @@
 <p>{% trans "To install the client, first add the signing key:" %}</p>
 <pre><code>sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 8756C4F765C9AC3CB6B85D62379CE192D401AB61
 </code></pre>
-<p>{% trans "Then add the repo to your apt source list, here we use Debian 8 (jessie) as an example. Change it to \"stretch\" for Debian 9. Change it to \"xenial\" for Ubuntu 16.04." %}</p>
+<p>{% blocktrans %}Then add the repo to your apt source list, here we use Debian 8 (jessie) as an example. Change it to "stretch" for Debian 9. Change it to "xenial" for Ubuntu 16.04.{% endblocktrans %}</p>
 <pre><code>echo deb http://deb.seadrive.org jessie main | sudo tee /etc/apt/sources.list.d/seafile.list
 sudo apt-get update
 </code></pre><p>{% trans "To install SeaDrive with GUI:" %}</p>
@@ -27,7 +27,7 @@ sudo yum install -y seadrive --enablerepo=cr
 </code></pre><p>{% trans "Install SeaDrive Client" %}</p>
 <pre><code>sudo yum install -y seadrive
 </code></pre><h2 id="running-seadrive-with-gui">{% trans "Running SeaDrive with GUI" %}</h4>
-<p>{% trans "To use SeaDrive, just run \"SeaDrive\" from your desktop environment, or type \"seadirve-gui\" in command line. After logging into your server, the virtual drive will be mounted in <code>~/SeaDrive.</code>" %}</p>
+<p>{% blocktrans %}To use SeaDrive, just run "SeaDrive" from your desktop environment, or type "seadirve-gui" in command line. After logging into your server, the virtual drive will be mounted in <code>~/SeaDrive.</code>{% endblocktrans %}</p>
 <h2 id="running-seadrive-without-gui">{% trans "Running SeaDrive without GUI" %}</h4>
 <p>{% trans "In some use cases, it is useful to run SeaDrive in a server environment. To use SeaDrive without GUI, you can directly run seadrive-daemon (the background daemon) from command line." %}</p>
 <p>{% trans "First, you have to obtain an access token from your server." %}</p>
@@ -47,11 +47,11 @@ size_limit = 10GB
 clean_cache_interval = 10
 </code></pre><p>{% trans "You can only specify one account in the config file. If you need to switch accounts, you'll have to stop SeaDrive, change config file and restart. Meaning of config options are as following:" %}</p>
 <ul>
-<li>{% trans "token: The access token you obtained above." %}</li>
-<li>{% trans "is_pro: Set to true if your server is Pro edition." %}</li>
-<li>{% trans "client_name: This name will be displayed in the device information on the server." %}</li>
-<li>{% trans "size_limit: Size limit of local cache space." %}</li>
-<li>{% trans "clean_cache_interval: Interval of cache cleaning. The unit is minute." %}</li>
+  <li>{% trans "<code>token</code>: The access token you obtained above." %}</li>
+  <li>{% trans "<code>is_pro</code>: Set to <code>true</code> if your server is Pro edition." %}</li>
+  <li>{% trans "<code>client_name</code>: This name will be displayed in the device information on the server." %}</li>
+  <li>{% trans "<code>size_limit</code>: Size limit of local cache space." %}</li>
+  <li>{% trans "<code>clean_cache_interval</code>: Interval of cache cleaning. The unit is minute." %}</li>
 </ul>
 <p>{% trans "Then you can start seadrive:" %}</p>
 <pre><code>seadrive -c ~/seadrive.conf -f -d data-directory [-l logfile] virtual-drive-dir
