--- a/frontend/src/css/review-comments.css
+++ b/frontend/src/css/review-comments.css
@@ -1,9 +1,9 @@
-.seafile-comment {
-  background-color: #fff;
+.review-side-panel .seafile-comment {
+  flex: 1;
   display: flex;
   flex-direction: column;
-  flex: 0 0 auto;
   height: 100%;
+  background-color: #fff;
 }
 .seafile-comment-resizing {
   user-select: none;
