[help] modified the text

--- a/seahub/help/templates/help/deleting_a_library.html
+++ b/seahub/help/templates/help/deleting_a_library.html
@@ -3,7 +3,7 @@
 
 {% block help_con %}
 <h3 class="hd">{% trans "Deleting a library" %}</h3>
-<p>{% trans "You can delete a library owned by you. Unlike the files and folders in the library, a deleted library currently cannot be restored by the user. But the Seafile server's administrator can restore a deleted library for users. In the future, we may allow the end users to restore a deleted library." %}</p>
+<p>{% trans "You can delete a library owned by you. A deleted library can be restored by you or Seafile server's administrator." %}</p>
 <p>{% trans "After a library is deleted, it has following effects:" %}</p>
 <ul>
   <li>{% trans "Share of the files and folders within this library are all canceled." %}</li>
