--- a/frontend/src/css/text-file-view.css
+++ b/frontend/src/css/text-file-view.css
@@ -1,17 +1,17 @@
 .text-file-view {
     overflow: auto;
 }
-.ReactCodeMirror {
+.text-file-view .ReactCodeMirror {
     box-shadow: 0 0 6px #ccc;
     border: 1px solid #ccc;
     width: calc(100% - 40px);
     max-width: 950px;
     margin: 0 auto;
 }
-.CodeMirror {
+.text-file-view .CodeMirror {
     height: auto;
     min-height: 300px;
 }
-.CodeMirror-scroll {
+.text-file-view .CodeMirror-scroll {
     min-height: 300px;
 }
