--- a/frontend/src/css/review-comments.css
+++ b/frontend/src/css/review-comments.css
@@ -1,8 +1,8 @@
 .review-side-panel .seafile-comment {
-  flex: 1;
   display: flex;
   flex-direction: column;
   height: 100%;
+  width: 100%;
   background-color: #fff;
 }
 .seafile-comment-resizing {
