[help] modified the text

--- a/seahub/help/templates/help/drive_client_2.0_for_windows_10.html
+++ b/seahub/help/templates/help/drive_client_2.0_for_windows_10.html
@@ -16,7 +16,7 @@
 <h4>{% trans "Accessing files in the Virtual Drive" %}</h4>
 <p>{% trans "Libraries are grouped into 4 categories in the virtual drive: My Libraries, Shared with me, Shared with groups and Shared with all." %}</p>
 <p>{% trans "As you can see, the file status icons is more integrated into Windows file explorer. The icons are a bit different form version 1.0." %}</p>
-<p>{% blocktrans %}Files in the virtual are created as "placeholders" in the local file system. They may be in 3 states:{% endblocktrans %}</p>
+<p>{% blocktrans %}Files in the virtual drive are created as "placeholders" in the local file system. They may be in 3 states:{% endblocktrans %}</p>
 <ul>
   <li>{% trans "<b>Placeholder file</b>: An empty representation of the file and can only be opened when there is network connection." %}</li>
   <li>{% trans "<b>Full file</b>: The file has been downloaded and saved locally. Download is automatic when a placeholder file is opened for the first time. These files are available whenever you open SeaDrive regardless to network connections. The operating system may decide to clear a full file when more disk space is needed." %}</li>
